# gordon-gekko

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TRANSFORMATION_COMPLETE.md  copilot-instructions.md  coverage.xml  pnpm-lock.yaml  pyproject.toml  requirements.txt
api/: Cargo.toml
api/src/: auth.rs  auth_validation.rs  config.rs  env_validation.rs  error.rs  handlers.rs  lib.rs  middleware.rs  models.rs  validation.rs  websocket.rs
api/src/handlers/: arbitrage.rs  auth_utils.rs  market_data.rs  mod.rs  portfolio.rs  strategies.rs  trades.rs
api/tests/: integration_security.rs
config/: arbitrage.toml
core/: Cargo.toml
core/src/: error.rs  lib.rs  order_manager.rs  smart_router.rs  types.rs
crates/arbitrage-engine/: Cargo.toml
crates/arbitrage-engine/src/: capital_allocator.rs  execution_engine.rs  lib.rs  opportunity_detector.rs  volatility_scanner.rs
crates/data-pipeline/: Cargo.toml
crates/data-pipeline/benches/: normalizer.rs
crates/data-pipeline/src/: distributor.rs  ingestion.rs  lib.rs  normalizer.rs  order_book.rs  pipeline.rs  websocket.rs
crates/event-bus/: Cargo.toml
crates/event-bus/benches/: dispatcher.rs
crates/event-bus/src/: channel.rs  dispatcher.rs  envelope.rs  error.rs  lib.rs  metadata.rs  tests.rs
crates/event-bus/src/core_bridges/: mod.rs
crates/event-bus/src/exchange_bridges/: mod.rs
crates/event-bus/src/util/: mod.rs  sequence.rs
crates/event-bus/tests/: integration.rs
crates/exchange-connectors/: Cargo.toml
crates/exchange-connectors/src/: binance_us.rs  coinbase.rs  lib.rs  oanda.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: lib.rs
crates/neural-engine/: Cargo.toml
crates/neural-engine/src/: lib.rs
crates/strategy-engine/: Cargo.toml
crates/strategy-engine/benches/: strategy_eval.rs
crates/strategy-engine/src/: event_bridge.rs  lib.rs  sandbox.rs  tests.rs  traits.rs
crates/swarm-intelligence/: Cargo.toml
crates/swarm-intelligence/src/: lib.rs
crates/trading-core/: Cargo.toml
crates/trading-core/src/: lib.rs
database/: Cargo.toml
database/migrations/: V001__create_arbitrage_tables.sql  V002__create_neural_model_tables.sql
database/src/: cache.rs  config.rs  connection.rs  database.rs  lib.rs  migrations.rs  supabase.rs
database/tests/integration/: cache_tests.rs  connection_tests.rs  database_tests.rs  migration_tests.rs  mod.rs  supabase_tests.rs
docs/: arbitrage_architecture.md  architecture.md  browser_automation_requirements.md  chat_ui_architecture.md  component_relationship_diagrams.md  comprehensive_system_architecture.md  deployment_components_requirements.md  deployment_domain_models.md  deployment_requirements.md  deployment_system_integration.md  domain_models.md  enhancement_proposals.md  neural_trader_integration_specification.md  overview.md  production_deployment_architecture.md  production_deployment_configs.md  production_deployment_diagrams.md  requirements.md  rust_comprehensive_architecture.md  system_architecture.md  test_framework_architecture.md
examples/: gekko_demo.rs
frontend/chat-ui/: README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/chat-ui/src/: App.tsx  main.tsx  styles.css
frontend/chat-ui/src/components/chat/: ChatComposer.tsx  ChatConversation.tsx
frontend/chat-ui/src/components/panels/: ActionDashboard.tsx  DiagnosticsPanel.tsx  InsightsPanel.tsx  PersonaControls.tsx
frontend/chat-ui/src/hooks/: useChatController.ts
frontend/chat-ui/src/services/: api.ts
frontend/chat-ui/src/state/: chatStore.ts  personaStore.ts
frontend/chat-ui/src/types/: index.ts
specs/: 1_initial_setup.md  2_trading_platform_integration.md  3_autonomous_trading.md  3_domain_model.md  3_resource_provisioner.md  4_advanced_features.md  4_configuration_manager.md  5_api_endpoints_integration.md  5_security_scanner.md  6_deployment_orchestrator.md  6_integration_tester.md  7_environment_validation.md  7_monitoring_dashboard.md  8_browser_setup.md  9_browser_authentication.md  rust_conversion_requirements.md  rust_migration.md
src/: config.rs  core.rs  lib.rs  main.rs  mcp.rs  neural.rs  swarm.rs  trading.rs  utils.rs  web.rs
src/gordon_gekko/: __init__.py
src/gordon_gekko.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gordon_gekko/config/: __init__.py  loader.py  settings.py  validators.py
src/gordon_gekko/core/: __init__.py  database_manager.py  trading_system.py
src/gordon_gekko/deployment/: __init__.py  configuration_manager.py  deployment_orchestrator.py  environment_validator.py  integration_tester.py  resource_provisioner.py  security_scanner.py
src/gordon_gekko/infrastructure/: __init__.py
src/gordon_gekko/infrastructure/cache/: manager.py
src/gordon_gekko/infrastructure/database/: manager.py
src/gordon_gekko/infrastructure/messaging/: manager.py
src/gordon_gekko/infrastructure/monitoring/: manager.py
src/mcp/mcp_admin/: actions.rs  mod.rs
tests/core/: test_database_manager.py
tests/deployment/: conftest.py
tests/deployment/configuration_manager/: test_configuration_manager.py
tests/deployment/deployment_orchestrator/: test_deployment_orchestrator.py
tests/deployment/environment_validator/: test_environment_validator.py
tests/deployment/integration_tester/: test_integration_tester.py
tests/deployment/resource_provisioner/: test_resource_provisioner.py
tests/deployment/security_scanner/: test_security_scanner.py
tests/integration/: arbitrage_tests.rs
