[package]
name = "gordon-gekko"
version = "0.1.0"
edition = "2021"
authors = ["Gordon Gekko Trading System"]
description = "High-performance autonomous trading system with neural network integration"
keywords = ["trading", "finance", "neural-network", "async", "rust"]
categories = ["finance", "api-bindings", "asynchronous"]
license = "MIT OR Apache-2.0"

# High performance and security optimizations
[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

# Workspace configuration for modular architecture
[workspace]
members = [
    "core",
    "database",
    "api"
]

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Trading & market data
rust_decimal = "1.36"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database & caching
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization & config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Neural networks (FANN integration)
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"

# HTTP & WebSocket clients
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.21"

# Error handling & logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Security & crypto
argon2 = "0.5"
aes-gcm = "0.10"
jwt = "0.16"

# Utilities
once_cell = "1.19"
dashmap = "6.0"
parking_lot = "0.12"

[dependencies]
# Core dependencies for the main binary
tokio = { workspace = true }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Core crate
gordon-gekko-core = { path = "core" }

# Database dependencies
sqlx = { workspace = true }
redis = { workspace = true, optional = true }

# Neural network dependencies
ndarray = { workspace = true, optional = true }
ndarray-rand = { workspace = true, optional = true }

[dev-dependencies]
# Testing framework
criterion = "0.5"
proptest = "1.0"


[features]
default = ["postgres", "redis", "neural"]
postgres = ["sqlx/postgres"]
redis = ["dep:redis"]
neural = ["dep:ndarray", "dep:ndarray-rand"]
gpu = ["neural"]  # Enable GPU acceleration
sandbox = []  # Sandbox mode for testing
production = ["postgres", "redis", "neural"]