[package]
name = "ninja-gekko"
version = "2.0.0"
edition = "2021"
rust-version = "1.80"
authors = ["Ninja Gekko Development Team <contact@ninja-gekko.ai>"]
description = "Next-Generation Rust-Powered Autonomous Trading Bot with Advanced MCP Intelligence"
documentation = "https://docs.ninja-gekko.ai"
repository = "https://github.com/clduab11/ninja-gekko"
license = "MIT"
keywords = ["trading", "neural-networks", "autonomous-bot", "mcp", "rust"]
categories = ["algorithms", "finance", "science", "web-programming", "wasm"]
readme = "README.md"

# High performance and security optimizations
[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = true

# Workspace configuration for modular architecture
[workspace]
members = [
    "core",
    "database", 
    "api"
]

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Trading & market data
rust_decimal = "1.36"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database & caching
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization & config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Neural networks (ruv-FANN integration)
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"

# HTTP & WebSocket clients
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.21"

# Error handling & logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Security & crypto
argon2 = "0.5"
aes-gcm = "0.10"
jwt = "0.16"

# Utilities
once_cell = "1.19"
dashmap = "6.0"
parking_lot = "0.12"

[dependencies]
# Core dependencies for the main binary
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
