[package]
name = "ninja-gekko-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Configuration
config = { workspace = true }

# Arbitrage engine integration
arbitrage-engine = { path = "../crates/arbitrage-engine" }
exchange-connectors = { path = "../crates/exchange-connectors" }