[package]
name = "neural-engine"
version = "2.0.0"
edition = "2021"
description = "Enhanced neural engine for Gordon Gekko arbitrage trading"

[dependencies]
# Async runtime and utilities
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Date and time
chrono = { workspace = true }

[features]
default = []
candle = []
pytorch = []
ruv-fann = []